# whodunnit-llm

./: .gitignore  .gitmodules  README.md
whodunnit-llm/: deepseek_r1_costar.tsv  gemini_costar.tsv  gpt_costar.tsv  llama_costar.tsv  llm_test.py  main.py  perpetrators.csv  perpetrators.py  pyproject.toml  results_only_one_case_episodes_deepseek_r1.txt  results_only_one_case_episodes_gemma2_9b_it.txt  results_only_one_case_episodes_llama33_70b.txt  results_only_one_case_episodes_mistral_saba_24b.txt  results_validation.py  source_retrieval_data.py  utility.py
whodunnit-llm/test_results/: gemma_2_9b_it.csv  llama3_3_70b_versatile.csv  llama_3_3_70b_versatile.csv  s01e07___deepseek-deepseek-r1:free__.csv  s01e07___gemma2-9b-it__.csv  s01e07___mistral-saba-24b__.csv  s01e08___gemma2-9b-it__.csv  s01e08___llama-3.3-70b-versatile__.csv  s01e08___mistral-saba-24b__.csv  s01e13___gemma2-9b-it__.csv  s01e13___llama-3.3-70b-versatile__.csv  s01e19___gemma2-9b-it__.csv  s01e19___llama-3.3-70b-versatile__.csv  s01e20___llama-3.3-70b-versatile__.csv  s01e23___llama-3.3-70b-versatile__.csv
whodunnit-llm/test_results/deepseek-deepseek-r1-free/: s01e07___deepseek-deepseek-r1-free__.csv  s01e08___deepseek-deepseek-r1-free__.csv  s01e13___deepseek-deepseek-r1-free__.csv  s01e19___deepseek-deepseek-r1-free__.csv  s01e20___deepseek-deepseek-r1-free__.csv  s01e23___deepseek-deepseek-r1-free__.csv  s02e01___deepseek-deepseek-r1-free__.csv  s02e04___deepseek-deepseek-r1-free__.csv  s02e06___deepseek-deepseek-r1-free__.csv  s02e09___deepseek-deepseek-r1-free__.csv  (+13 more)
(+1102 files in other folders)
