[tool.poetry]
name = "whodunnit-llm"
version = "0.1.0"
description = ""
authors = ["pierluigitrc <pierluigitrc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.81.0"
numpy = "^2.2.6"
tiktoken = "^0.9.0"
groq = "^0.26.0"
instructor = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
